Fix bug where the wrong colour shows when guessing duplicate letters

--- a/src/components/wordle/Wordle.css
+++ b/src/components/wordle/Wordle.css
@@ -267,7 +267,17 @@ h2.answer {
   }
 
   .gameOver {
-    margin-top: 0.75em;
+    margin-top: 2em;
+  }
+
+  h2.answer {
+    padding-bottom: 0.5em;
+  }
+}
+
+@media screen and (max-height: 900px) {
+  .gameOver {
+    margin-top: -1em;
   }
 
   h2.answer {
